# recommenders

./: README.md  pyproject.toml  transformer_based_reco.ipynb
.ipynb_checkpoints/: transformer_based_reco-checkpoint.ipynb
transformer_based_recommendation/: README.md  __init__.py  datasets.py  models.py  recommender.py  utils.py
transformer_based_recommendation/configs/: params.yaml
